# nbpay-fintech-platform

./: .env.example  .gitignore  AGENTS.md  README.md  docker-compose.yml  mkdocs.yml  pyproject.toml
app/: main.py
app/api/: dependencies.py
app/api/v1/routers/: auth.py  users.py
app/cli/: manage.py
app/core/: config.py  i18n.py  logging.py  security.py
app/domain/user/: models.py  repositories.py  reset_tokens.py  schemas.py  services.py
app/infrastructure/cache/: password_reset_store.py  token_store.py
app/infrastructure/db/: session.py
app/infrastructure/models/: user.py
app/infrastructure/repositories/: user_inmemory.py  user_sqlalchemy.py
app/locales/en/LC_MESSAGES/: messages.po
app/locales/ru/LC_MESSAGES/: messages.po
app/utils/: exceptions.py
docker/: backend.Dockerfile
docs/: auth.md  index.md  setup.md
frontend/: .dockerignore  .env.development  .env.docker  Dockerfile  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  main.tsx
frontend/src/auth/: AuthContext.tsx
frontend/src/pages/: ForgotPassword.tsx  Home.tsx  Login.tsx  Profile.tsx  Register.tsx  ResetPassword.tsx
frontend/src/services/: api.ts
tests/api/: test_auth.py
tests/domain/user/: conftest.py  test_services.py
