[project]
name = "fastapi_app"
version = "0.1.0"
description = "Clean architecture FastAPI backend (OOP)"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Your Name" }]
dependencies = [
    "fastapi[standard]>=0.111.0",
    "pydantic>=2.7",
    "pydantic-settings>=2.2",
    "uvicorn>=0.30",
    "structlog>=24.2.0",
    "sqlalchemy>=2.0",
    "psycopg[binary]>=3.1",
    "passlib[bcrypt]>=1.7",
    "python-jose[cryptography]>=3.3",
]

[build-system]
requires = ["hatchling>=1.24.2"]
build-backend = "hatchling.build"

[tool.uv]
package = true
dev-dependencies = [
    "pytest>=8.2",
    # Pin httpx to <0.26 to keep AsyncClient(app=...) test compatibility
    "httpx>=0.25,<0.26",
    "pytest-asyncio>=0.23",
    "ruff>=0.5",
    "mkdocs>=1.6",
    "mkdocs-material>=9.5",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]
